test/files/neg/t6528.check
t6528.scala:6: error: implicit error;
!I e: CoSet[U, Any]
  implicitly[CoSet[U, Any]]
            ^
1 error
